<resources>
    <string name="app_name">OSH</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_door_open">DoorOpenActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="mqtt_host">MQTT Host</string>
    <string name="mqtt_settings">MQTT</string>
    <string name="mqtt_port">MQTT Port</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="settings">Settings</string>
    <string name="mqtt_port_key">mqtt_port_key</string>
    <string name="mqtt_host_key">mqtt_host_key</string>
    <string name="db_host">db_host</string>
    <string name="db_port">db_port</string>
    <string name="db_name">db_name</string>
    <string name="db_username">db_username</string>
    <string name="db_password">db_password</string>
    <string name="area_last_tab">area_last_tab</string>
    <string name="main_last_nav">main_last_nav</string>
    <string name="title_lights">Lights</string>
    <string name="title_area">Area</string>
    <string name="area_last_overlay">area_last_overlay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mqtt_client_id_key">mqtt_client_id</string>
    <string name="mqtt_client_id">Client ID</string>

</resources>