<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/mqtt_settings">

        <EditTextPreference
            app:defaultValue="localhost"
            app:key="@string/mqtt_host_key"
            app:title="@string/mqtt_host"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="1883"
            app:key="@string/mqtt_port_key"
            app:title="@string/mqtt_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>